# TSP-slicer

./: CITATION.cff  More TSP options.md  README.md  TSPPostProcessor.py  __init__.py  adaptive_pi  curve_memory_tsp.py  fusion 360 readme  gu-tsp.py  hybridtsp.py  newarp_opt  newjson  open source concepts  plugin.json  prusa_tsp_pp.py  pyproject.toml  toolpaths.md  tsp_opt.py  tsplaplace.py
adaptive_pi_tsp/: README_EXPERIMENTS.md  __init__.py  arp_adaptive_pi_sim.py  arp_phase_scan.py  fields.py  solver.py
arp_pi_experiments/: README_EXPERIMENTS.md  arp_adaptive_pi_sim.py  arp_phase_scan.py  noise_hardened_arp.py
docs/: curvature_parameter_refinement.md  curve_memory_integration.md  preregistration.md
examples/: Newfile  best_tsp_solver.py  newarp_opt  newinit  newpost_proc
scripts/: make_plots.py  reproduce.sh  summarize.py
