
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-pi-tsp"
version = "0.1.0"
description = "TSP on adaptive-π manifolds with φ = π/π_a and obstacle avoidance"
authors = [{name="Ryan McKenna et al."}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://example.com"
